# tensara

./: .TODOS.md  .env.example  .eslintrc.cjs  .gitignore  .gitmodules  .prettierrc  AMD_FIX_FINAL_SUMMARY.md  AMD_TIMEOUT_FIX.md  CMakeLists.txt  FLEET_API_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  PRIVACY_POLICY.md  QUICK_START_AMD.md  README.md  TERMS_OF_SERVICE.md  cypress.config.ts  cypress.env.example.json  deploy.sh  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  setup_amd_devcloud.sh  solution.cuh  start-database.sh  test_amd_fleet.py  tsconfig.json
.dstack/: profiles.yml.backup
api/: Makefile  (+5 more)
engine/: .env.example  amd_fleet_manager.py  amd_remote_runner.py  amd_task_runner.py  api.py  baseline.py  create_amd_fleet.py  device_query.py  dstack_cli_wrapper.py  dstack_runner.py  dstack_runner.sdk_attempt.py  fleet-amd-mi300x.yml  gpu_monitor.py  hip_harness.py  problem.py  pyproject.toml  runner.py  task_listener.py  test-tinygrad.py  test_fleet_implementation.py  test_script.py  test_status_fix.py  test_terminated_status.py  tolerance.py  tolerances.py  util.py  utils.py  vm_orchestrator.py  vm_orchestrator.sdk_attempt.py  vm_orchestrator_client.py  vm_orchestrator_client.sdk_attempt.py
engine/archive/: device_query.py  pyproject.toml  util.py
engine/archive/skeleton/: checker.cu
engine/benchmark/: Makefile  benchmark  benchmark.cu  core.hpp  problem_test.hpp  solution.cuh  test_cases.hpp  tests.hpp
engine/checker/: CMakeLists.txt  GENERATOR_README.md  Makefile  README.md  __init__.py  bindings.cpp  build.sh  checker  checker.cu  compare.py  core.hpp  cuda_bindings.cpp  cuda_bindings.cu  generate.py  generate_simple.py  matrix_multiply_spec.json  python_reference.cpp  python_reference.hpp  reference.cu  reference.py  setup.py  solution.cu  solution.cuh  solution.py  test.py  tests.hpp
engine/extra/: solution.cu  test_endpoint.py  tests.hpp
engine/python_engine/: MakeFile  checker.py  problem.py  python_api.py  runner.py  utils.py
engine/python_engine/examples/: matmul.py  vecadd.py  vecadd_sol.cu
engine/python_engine/problems/: README.md  conv_1d.py  conv_2d.py  gemm_relu.py  leaky_relu.py  lower_trig_matmul.py  matrix_multiplication.py  matrix_vector.py  relu.py  square_matmul.py  vector_addition.py
engine/python_engine/tests/: README.md  problem.py  request.json  solution.cu  submit.sh
engine/scripts/: render_matplotlib_plot.py
engine/skeleton/: benchmark  benchmark.cu  checker.cu  core.hpp
engine/tests/: README.md  conftest.py  request.json  submit.sh  test_benchmark_replay.py
(+336 files in other folders)
