[project]
name = "tensara-engine"
version = "0.1.0"
description = "CUDA runner engine using modal for Tensara"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11",
    "modal>=0.73.85",
    "numpy>=2.3.3",
    "simplejson>=3.20.1",
    "torch>=2.6.0",
]

[tool.ruff]
line-length = 100
